--- a/App/Canchas/app/src/main/res/values/strings.xml
+++ b/App/Canchas/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Canchas</string>
+    <string name="google_app_id">688645169109</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
